# personal_agent

./: .gitignore  README.md  building_agent.ipynb  pyproject.toml  test.ipynb
src/personal_agent/: __init__.py
src/personal_agent/tools/default/: __init__.py
