[project]
name = "personal-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Junwei", email = "wangjunwei38@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.181.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "html2text>=2025.4.15",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "langgraph-cli[inmem]>=0.4.2",
    "langsmith[pytest]>=0.4.27",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pyppeteer>=2.0.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
]

[project.scripts]
personal-agent = "personal_agent:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
